Actualizacion Jupyter para ambos experimentos
tav_raw-> carpetas con videos en crudo
tav_clean-> carpetas con videos cortados

--- a/i3dcrimefinetuning.ipynb
+++ b/i3dcrimefinetuning.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "64f487c7",
    "metadata": {},
    "outputs": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "bc5a2e53",
    "metadata": {},
    "outputs": [],
@@ -50,15 +50,11 @@
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
     "# === Configuración adaptativa (CUDA/CPU) ===\n",
-    "TRAIN_DIR = \"./tav_clean/training\"\n",
-    "VALIDATION_DIR = \"./tav_clean/validacion\"\n",
     "CLIP_DURATION = 2.56  # segundos\n",
     "STRIDE = 1.0  # segundos\n",
     "EPOCHS = 30\n",
     "LEARNING_RATE = 1e-4\n",
     "EARLY_STOPPING_PATIENCE = 3\n",
-    "OUTPUT_MODEL = \"i3d_finetuned_violencia_robo_normal.pth\"\n",
-    "METRICS_FILE = \"training_metrics.xlsx\"\n",
     "PRETRAINED_MODEL = \"I3D_8x8_R50_pytorchvideo.pyth\"  # Formato PyTorchVideo\n",
     "LABELS = [\"Normal\", \"Robo\", \"Violencia\"]\n",
     "TARGET_SIZE = (224, 224)\n",
@@ -73,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "c39c7f1c",
    "metadata": {},
    "outputs": [
@@ -82,7 +78,7 @@
      "output_type": "stream",
      "text": [
       "🔍 VRAM detectada: 4.3 GB\n",
-      "⚡ Configuración optimizada: batch_size=4, num_workers=3\n",
+      "⚡ Configuración optimizada: batch_size=6, num_workers=3\n",
       "🚀 GPU detectada: NVIDIA GeForce GTX 1650 Ti\n",
       "💾 VRAM total: 4.3 GB\n",
       "🖥️  Device: cuda:0\n"
@@ -96,9 +92,9 @@
     "        gpu_memory_gb = torch.cuda.get_device_properties(0).total_memory / 1e9\n",
     "        print(f\"🔍 VRAM detectada: {gpu_memory_gb:.1f} GB\")\n",
     "        \n",
-    "        # Configuración solicitada: batch_size=4\n",
-    "        batch_size = 4\n",
-    "        num_workers = 3  # Un valor razonable para este batch size\n",
+    "        # Configuración solicitada:\n",
+    "        batch_size = 6\n",
+    "        num_workers = 3 \n",
     "            \n",
     "        print(f\"⚡ Configuración optimizada: batch_size={batch_size}, num_workers={num_workers}\")\n",
     "        \n",
@@ -141,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "f6440970",
    "metadata": {},
    "outputs": [],
@@ -275,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "b0f975a8",
    "metadata": {},
    "outputs": [],
@@ -339,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "db8e1320",
    "metadata": {},
    "outputs": [],
@@ -478,50 +474,6 @@
     "    \n",
     "    print(\"❌ No se pudo encontrar la capa final para modificar\")\n",
     "    return False"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "5a6ce487",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "🧠 Configurando modelo I3D...\n",
-      "🔄 Creando modelo I3D-ResNet50 desde PyTorchVideo Hub...\n",
-      "✅ Modelo I3D-ResNet50 creado exitosamente\n",
-      "\n",
-      "📦 Verificando modelo preentrenado...\n",
-      "✅ Modelo preentrenado encontrado: I3D_8x8_R50_pytorchvideo.pyth\n",
-      "🔍 Detectado formato PyTorchVideo (.pyth)\n",
-      "✅ Pesos preentrenados cargados: 320/320 capas\n",
-      "✅ Capa final 'blocks.6.proj' modificada: 2048 -> 3\n",
-      "📊 Parámetros del modelo: 27,230,019\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Crear modelo\n",
-    "print(\"\\n🧠 Configurando modelo I3D...\")\n",
-    "model = crear_modelo_i3d()\n",
-    "\n",
-    "# Descargar modelo preentrenado si no existe\n",
-    "print(\"\\n📦 Verificando modelo preentrenado...\")\n",
-    "descargar_modelo_preentrenado()\n",
-    "\n",
-    "# Cargar pesos preentrenados\n",
-    "cargar_pesos_preentrenados(model, PRETRAINED_MODEL)\n",
-    "\n",
-    "# Modificar capa final\n",
-    "modificar_capa_final(model, len(LABELS))\n",
-    "\n",
-    "# Mostrar información del modelo\n",
-    "model_params = sum(p.numel() for p in model.parameters())\n",
-    "print(f\"📊 Parámetros del modelo: {model_params:,}\")"
    ]
   },
   {
@@ -756,6 +708,97 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "5a6ce487",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ejecutar_entrenamiento():\n",
+    "    \"\"\"Función principal para ejecutar el entrenamiento\"\"\"\n",
+    "    # Crear modelo\n",
+    "    print(\"\\n🧠 Configurando modelo I3D...\")\n",
+    "    model = crear_modelo_i3d()\n",
+    "\n",
+    "    # Descargar modelo preentrenado si no existe\n",
+    "    print(\"\\n📦 Verificando modelo preentrenado...\")\n",
+    "    descargar_modelo_preentrenado()\n",
+    "\n",
+    "    # Cargar pesos preentrenados\n",
+    "    cargar_pesos_preentrenados(model, PRETRAINED_MODEL)\n",
+    "\n",
+    "    # Modificar capa final\n",
+    "    modificar_capa_final(model, len(LABELS))\n",
+    "\n",
+    "    # Mostrar información del modelo\n",
+    "    model_params = sum(p.numel() for p in model.parameters())\n",
+    "    print(f\"📊 Parámetros del modelo: {model_params:,}\")\n",
+    "\n",
+    "    # Recolectar videos de entrenamiento y validación\n",
+    "    print(f\"\\n📂 Buscando videos de ENTRENAMIENTO en: {TRAIN_DIR}\")\n",
+    "    train_video_paths = recolectar_videos(TRAIN_DIR)\n",
+    "    if not train_video_paths:\n",
+    "        print(\"❌ No se encontraron videos de entrenamiento. Verifica la estructura de carpetas.\")\n",
+    "\n",
+    "    print(f\"✅ Total de videos de entrenamiento: {len(train_video_paths)}\")\n",
+    "    contar_videos_por_etiqueta(train_video_paths)\n",
+    "\n",
+    "    print(f\"\\n📂 Buscando videos de VALIDACIÓN en: {VALIDATION_DIR}\")\n",
+    "    val_video_paths = recolectar_videos(VALIDATION_DIR)\n",
+    "    if not val_video_paths:\n",
+    "        print(\"❌ No se encontraron videos de validación. Verifica la estructura de carpetas.\")\n",
+    "\n",
+    "    print(f\"✅ Total de videos de validación: {len(val_video_paths)}\")\n",
+    "    contar_videos_por_etiqueta(val_video_paths)\n",
+    "\n",
+    "    # Crear datasets para entrenamiento y validación\n",
+    "    print(\"\\n🔄 Creando datasets con sliding window...\")\n",
+    "    train_dataset = SlidingWindowVideoDataset(\n",
+    "        video_paths=train_video_paths,\n",
+    "        clip_duration=CLIP_DURATION,\n",
+    "        stride=STRIDE,\n",
+    "        num_frames=NUM_FRAMES\n",
+    "    )\n",
+    "    val_dataset = SlidingWindowVideoDataset(\n",
+    "        video_paths=val_video_paths,\n",
+    "        clip_duration=CLIP_DURATION,\n",
+    "        stride=STRIDE,\n",
+    "        num_frames=NUM_FRAMES\n",
+    "    )\n",
+    "\n",
+    "    # Crear dataloaders para entrenamiento y validación con optimizaciones\n",
+    "    train_loader = DataLoader(\n",
+    "        train_dataset,\n",
+    "        batch_size=config['batch_size'],\n",
+    "        shuffle=True,\n",
+    "        num_workers=config['num_workers'],\n",
+    "        pin_memory=config['pin_memory'],\n",
+    "        persistent_workers=config['num_workers'] > 0,\n",
+    "        prefetch_factor=2 if config['num_workers'] > 0 else 2,  # Precargar más datos\n",
+    "        drop_last=True  # Evitar lotes incompletos que pueden ser menos eficientes\n",
+    "    )\n",
+    "\n",
+    "    val_loader = DataLoader(\n",
+    "        val_dataset,\n",
+    "        batch_size=config['batch_size'],\n",
+    "        shuffle=False,\n",
+    "        num_workers=config['num_workers'],\n",
+    "        pin_memory=config['pin_memory'],\n",
+    "        persistent_workers=config['num_workers'] > 0,\n",
+    "        prefetch_factor=2 if config['num_workers'] > 0 else 2\n",
+    "    )\n",
+    "\n",
+    "    print(f\"✅ DataLoaders creados: {len(train_loader)} batches de entrenamiento, {len(val_loader)} batches de validación\")\n",
+    "\n",
+    "    # Entrenar\n",
+    "    entrenar_modelo(model, train_loader, val_loader, device, EPOCHS, config)\n",
+    "\n",
+    "    print(\"\\n🎉 ¡Entrenamiento completado!\")\n",
+    "    if device.tyspe == 'cuda':\n",
+    "        print(f\"🏁 VRAM final usada: {torch.cuda.memory_allocated(0) / 1e9:.1f} GB\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "ba949b71",
    "metadata": {},
    "outputs": [
@@ -763,6 +806,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
+      "🧠 Configurando modelo I3D...\n",
+      "🔄 Creando modelo I3D-ResNet50 desde PyTorchVideo Hub...\n",
+      "✅ Modelo I3D-ResNet50 creado exitosamente\n",
+      "\n",
+      "📦 Verificando modelo preentrenado...\n",
+      "✅ Modelo preentrenado encontrado: I3D_8x8_R50_pytorchvideo.pyth\n",
+      "🔍 Detectado formato PyTorchVideo (.pyth)\n",
+      "✅ Pesos preentrenados cargados: 320/320 capas\n",
+      "✅ Capa final 'blocks.6.proj' modificada: 2048 -> 3\n",
+      "📊 Parámetros del modelo: 27,230,019\n",
       "\n",
       "📂 Buscando videos de ENTRENAMIENTO en: ./tav_clean/training\n",
       "✅ Total de videos de entrenamiento: 274\n",
@@ -780,108 +834,22 @@
       "   Normal: 17 videos\n",
       "   Robo: 22 videos\n",
       "   Violencia: 18 videos\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    " # Recolectar videos de entrenamiento y validación\n",
-    "print(f\"\\n📂 Buscando videos de ENTRENAMIENTO en: {TRAIN_DIR}\")\n",
-    "train_video_paths = recolectar_videos(TRAIN_DIR)\n",
-    "if not train_video_paths:\n",
-    "    print(\"❌ No se encontraron videos de entrenamiento. Verifica la estructura de carpetas.\")\n",
-    "\n",
-    "print(f\"✅ Total de videos de entrenamiento: {len(train_video_paths)}\")\n",
-    "contar_videos_por_etiqueta(train_video_paths)\n",
-    "\n",
-    "print(f\"\\n📂 Buscando videos de VALIDACIÓN en: {VALIDATION_DIR}\")\n",
-    "val_video_paths = recolectar_videos(VALIDATION_DIR)\n",
-    "if not val_video_paths:\n",
-    "    print(\"❌ No se encontraron videos de validación. Verifica la estructura de carpetas.\")\n",
-    "\n",
-    "print(f\"✅ Total de videos de validación: {len(val_video_paths)}\")\n",
-    "contar_videos_por_etiqueta(val_video_paths)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "39123752",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "\n",
       "\n",
       "🔄 Creando datasets con sliding window...\n",
       "📊 Total de clips generados: 15405\n",
       "📊 Total de clips generados: 2277\n",
-      "✅ DataLoaders creados: 3851 batches de entrenamiento, 570 batches de validación\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Crear datasets para entrenamiento y validación\n",
-    "print(\"\\n🔄 Creando datasets con sliding window...\")\n",
-    "train_dataset = SlidingWindowVideoDataset(\n",
-    "    video_paths=train_video_paths,\n",
-    "    clip_duration=CLIP_DURATION,\n",
-    "    stride=STRIDE,\n",
-    "    num_frames=NUM_FRAMES\n",
-    ")\n",
-    "val_dataset = SlidingWindowVideoDataset(\n",
-    "    video_paths=val_video_paths,\n",
-    "    clip_duration=CLIP_DURATION,\n",
-    "    stride=STRIDE,\n",
-    "    num_frames=NUM_FRAMES\n",
-    ")\n",
-    "\n",
-    "# Crear dataloaders para entrenamiento y validación con optimizaciones\n",
-    "train_loader = DataLoader(\n",
-    "    train_dataset,\n",
-    "    batch_size=config['batch_size'],\n",
-    "    shuffle=True,\n",
-    "    num_workers=config['num_workers'],\n",
-    "    pin_memory=config['pin_memory'],\n",
-    "    persistent_workers=config['num_workers'] > 0,\n",
-    "    prefetch_factor=2 if config['num_workers'] > 0 else 2,  # Precargar más datos\n",
-    "    drop_last=True  # Evitar lotes incompletos que pueden ser menos eficientes\n",
-    ")\n",
-    "\n",
-    "val_loader = DataLoader(\n",
-    "    val_dataset,\n",
-    "    batch_size=config['batch_size'],\n",
-    "    shuffle=False,\n",
-    "    num_workers=config['num_workers'],\n",
-    "    pin_memory=config['pin_memory'],\n",
-    "    persistent_workers=config['num_workers'] > 0,\n",
-    "    prefetch_factor=2 if config['num_workers'] > 0 else 2\n",
-    ")\n",
-    "\n",
-    "print(f\"✅ DataLoaders creados: {len(train_loader)} batches de entrenamiento, {len(val_loader)} batches de validación\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "760f0325",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "✅ DataLoaders creados: 2567 batches de entrenamiento, 380 batches de validación\n",
       "✅ Mixed Precision habilitado (AMP)\n",
       "🚀 Optimizaciones CUDA habilitadas (TF32, cuDNN benchmark)\n",
       "📊 VRAM disponible: 4.3 GB\n",
       "\n",
       "🚀 [Entrenamiento iniciado en cuda:0]\n",
-      "📋 Configuración: 30 épocas, batch_size=4, lr=0.0001\n",
+      "📋 Configuración: 30 épocas, batch_size=6, lr=0.0001\n",
       "💡 TIPS para maximizar GPU:\n",
       "   - Si GPU < 2GB durante entrenamiento, considera aumentar batch_size\n",
       "   - VRAM total disponible: 4.3GB\n",
-      "   - Batch size actual: 4\n",
+      "   - Batch size actual: 6\n",
       "\n",
       "📅 --- Época 1/30 ---\n"
      ]
@@ -889,35 +857,26 @@
    ],
    "source": [
     "%%time\n",
-    "# Entrenar\n",
-    "entrenar_modelo(model, train_loader, val_loader, device, EPOCHS, config)\n",
-    "\n",
-    "print(\"\\n🎉 ¡Entrenamiento completado!\")\n",
-    "if device.tyspe == 'cuda':\n",
-    "    print(f\"🏁 VRAM final usada: {torch.cuda.memory_allocated(0) / 1e9:.1f} GB\")\n"
+    "TRAIN_DIR = \"./tav_clean/training\"\n",
+    "VALIDATION_DIR = \"./tav_clean/validacion\"\n",
+    "OUTPUT_MODEL = \"i3d_finetuned_violencia_robo_normal.pth\"\n",
+    "METRICS_FILE = \"training_metrics.xlsx\"\n",
+    "ejecutar_entrenamiento()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "162dac5c",
+   "id": "39123752",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# === Configuración adaptativa (CUDA/CPU) ===\n",
+    "%%time\n",
     "TRAIN_DIR = \"./tav_raw/training\"\n",
     "VALIDATION_DIR = \"./tav_raw/validacion\"\n",
-    "CLIP_DURATION = 2.56  # segundos\n",
-    "STRIDE = 1.0  # segundos\n",
-    "EPOCHS = 10\n",
-    "LEARNING_RATE = 1e-4\n",
-    "EARLY_STOPPING_PATIENCE = 3\n",
-    "OUTPUT_MODEL = \"i3d_finetuned_violencia_robo_normal.pth\"\n",
-    "METRICS_FILE = \"training_metrics.xlsx\"\n",
-    "PRETRAINED_MODEL = \"I3D_8x8_R50_pytorchvideo.pyth\"  # Formato PyTorchVideo\n",
-    "LABELS = [\"Normal\", \"Robo\", \"Violencia\"]\n",
-    "TARGET_SIZE = (224, 224)\n",
-    "NUM_FRAMES = 64"
+    "OUTPUT_MODEL = \"i3d_finetuned_violencia_robo_normal_raw.pth\"\n",
+    "METRICS_FILE = \"training_metrics_raw.xlsx\"\n",
+    "ejecutar_entrenamiento()"
    ]
   }
  ],
