Entrenamiento guarda ckecpoints tras cada epoca

--- a/i3dcrimefinetuning.ipynb
+++ b/i3dcrimefinetuning.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "64f487c7",
    "metadata": {},
    "outputs": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "bc5a2e53",
    "metadata": {},
    "outputs": [],
@@ -51,14 +51,14 @@
     "\n",
     "# === Configuración adaptativa (CUDA/CPU) ===\n",
     "CLIP_DURATION = 2.56  # segundos\n",
-    "STRIDE = 1.0  # segundos\n",
-    "EPOCHS = 30\n",
+    "STRIDE = 2.1  # segundos\n",
+    "EPOCHS = 10\n",
     "LEARNING_RATE = 1e-4\n",
-    "EARLY_STOPPING_PATIENCE = 3\n",
+    "EARLY_STOPPING_PATIENCE = 2\n",
     "PRETRAINED_MODEL = \"I3D_8x8_R50_pytorchvideo.pyth\"  # Formato PyTorchVideo\n",
     "LABELS = [\"Normal\", \"Robo\", \"Violencia\"]\n",
     "TARGET_SIZE = (224, 224)\n",
-    "NUM_FRAMES = 64"
+    "NUM_FRAMES = 32"
    ]
   },
   {
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "c39c7f1c",
    "metadata": {},
    "outputs": [
@@ -78,7 +78,7 @@
      "output_type": "stream",
      "text": [
       "🔍 VRAM detectada: 4.3 GB\n",
-      "⚡ Configuración optimizada: batch_size=6, num_workers=3\n",
+      "⚡ Configuración optimizada: batch_size=1, num_workers=0\n",
       "🚀 GPU detectada: NVIDIA GeForce GTX 1650 Ti\n",
       "💾 VRAM total: 4.3 GB\n",
       "🖥️  Device: cuda:0\n"
@@ -93,8 +93,8 @@
     "        print(f\"🔍 VRAM detectada: {gpu_memory_gb:.1f} GB\")\n",
     "        \n",
     "        # Configuración solicitada:\n",
-    "        batch_size = 6\n",
-    "        num_workers = 3 \n",
+    "        batch_size = 1\n",
+    "        num_workers = 0\n",
     "            \n",
     "        print(f\"⚡ Configuración optimizada: batch_size={batch_size}, num_workers={num_workers}\")\n",
     "        \n",
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "f6440970",
    "metadata": {},
    "outputs": [],
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "b0f975a8",
    "metadata": {},
    "outputs": [],
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "db8e1320",
    "metadata": {},
    "outputs": [],
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "ea50b6ff",
    "metadata": {},
    "outputs": [],
@@ -541,6 +541,8 @@
     "        print(f\"\\n📅 --- Época {epoch+1}/{num_epochs} ---\")\n",
     "        \n",
     "        for batch_idx, batch in enumerate(train_loader):\n",
+    "            if batch_idx == 0:\n",
+    "                print(\"✅ Primer batch cargado y procesado.\")            \n",
     "            batch_start_time = time.time()\n",
     "            videos = batch['video'].to(device, non_blocking=config['pin_memory'])\n",
     "            labels = batch['label'].to(device, non_blocking=config['pin_memory'])\n",
@@ -590,7 +592,8 @@
     "            )\n",
     "            if device.type == 'cuda':\n",
     "                log_msg += f\" | GPU: {gpu_memory:.1f}GB\"\n",
-    "            print(log_msg)\n",
+    "            if batch_idx % 200 == 0 or batch_idx == len(train_loader) - 1:\n",
+    "                print(log_msg)                \n",
     "\n",
     "            # Limpiar cache menos frecuentemente para mejor rendimiento\n",
     "            if batch_idx % 100 == 0 and device.type == 'cuda':\n",
@@ -637,6 +640,20 @@
     "            'val_loss': val_loss,\n",
     "            'val_accuracy': val_accuracy\n",
     "        })\n",
+    "\n",
+    "        # Guardar checkpoint al final de cada época\n",
+    "        checkpoint = {\n",
+    "            'epoch': epoch + 1,  # número de época actual\n",
+    "            'model_state_dict': model.state_dict(),\n",
+    "            'optimizer_state_dict': optimizer.state_dict(),\n",
+    "            'scheduler_state_dict': scheduler.state_dict(),\n",
+    "            \"amp_scaler_state_dict\": scaler.state_dict() if scaler else None,\n",
+    "            'history': history,\n",
+    "            'best_val_loss': best_val_loss,\n",
+    "        }\n",
+    "\n",
+    "        torch.save(checkpoint, f\"checkpoint_epoch_{epoch+1}.pth\")\n",
+    "        print(f\"💾 Checkpoint guardado: checkpoint_epoch_{epoch+1}.pth\")\n",
     "\n",
     "        # Early Stopping\n",
     "        if val_loss < best_val_loss:\n",
@@ -707,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "5a6ce487",
    "metadata": {},
    "outputs": [],
@@ -771,19 +788,19 @@
     "        shuffle=True,\n",
     "        num_workers=config['num_workers'],\n",
     "        pin_memory=config['pin_memory'],\n",
-    "        persistent_workers=config['num_workers'] > 0,\n",
-    "        prefetch_factor=2 if config['num_workers'] > 0 else 2,  # Precargar más datos\n",
-    "        drop_last=True  # Evitar lotes incompletos que pueden ser menos eficientes\n",
+    "        drop_last=True,\n",
+    "        **({\"persistent_workers\": True, \"prefetch_factor\": 2} if config['num_workers'] > 0 else {})\n",
     "    )\n",
+    "\n",
     "\n",
     "    val_loader = DataLoader(\n",
     "        val_dataset,\n",
     "        batch_size=config['batch_size'],\n",
-    "        shuffle=False,\n",
+    "        shuffle=True,\n",
     "        num_workers=config['num_workers'],\n",
     "        pin_memory=config['pin_memory'],\n",
-    "        persistent_workers=config['num_workers'] > 0,\n",
-    "        prefetch_factor=2 if config['num_workers'] > 0 else 2\n",
+    "        drop_last=True,\n",
+    "        **({\"persistent_workers\": True, \"prefetch_factor\": 2} if config['num_workers'] > 0 else {})\n",
     "    )\n",
     "\n",
     "    print(f\"✅ DataLoaders creados: {len(train_loader)} batches de entrenamiento, {len(val_loader)} batches de validación\")\n",
@@ -837,21 +854,23 @@
       "\n",
       "\n",
       "🔄 Creando datasets con sliding window...\n",
-      "📊 Total de clips generados: 15405\n",
-      "📊 Total de clips generados: 2277\n",
-      "✅ DataLoaders creados: 2567 batches de entrenamiento, 380 batches de validación\n",
+      "📊 Total de clips generados: 7401\n",
+      "📊 Total de clips generados: 1103\n",
+      "✅ DataLoaders creados: 7401 batches de entrenamiento, 1103 batches de validación\n",
       "✅ Mixed Precision habilitado (AMP)\n",
       "🚀 Optimizaciones CUDA habilitadas (TF32, cuDNN benchmark)\n",
       "📊 VRAM disponible: 4.3 GB\n",
       "\n",
       "🚀 [Entrenamiento iniciado en cuda:0]\n",
-      "📋 Configuración: 30 épocas, batch_size=6, lr=0.0001\n",
+      "📋 Configuración: 10 épocas, batch_size=1, lr=0.0001\n",
       "💡 TIPS para maximizar GPU:\n",
       "   - Si GPU < 2GB durante entrenamiento, considera aumentar batch_size\n",
       "   - VRAM total disponible: 4.3GB\n",
-      "   - Batch size actual: 6\n",
+      "   - Batch size actual: 1\n",
       "\n",
-      "📅 --- Época 1/30 ---\n"
+      "📅 --- Época 1/10 ---\n",
+      "✅ Primer batch cargado y procesado.\n",
+      "   [   1/7401] Loss: 1.0371 | Acc: 100.00% | ETA: 318955s | Preds: {'Normal': 1} | GPU: 0.3GB\n"
      ]
     }
    ],
