Optimizaciones para mejorar rendimiento
-Se incluye aumento de data con brillo y flip horizontal (para train, validation se mantiene)
-Se congelan capas iniciales de I3D, simplificando flujo de carga de pesos y modificación de capa final (todo en crear_modelo_i3d ahora)
-Se guarda cada epoca como checkpoint

--- a/i3dcrimefinetuning.ipynb
+++ b/i3dcrimefinetuning.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "id": "64f487c7",
    "metadata": {},
    "outputs": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "id": "bc5a2e53",
    "metadata": {},
    "outputs": [],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "id": "c39c7f1c",
    "metadata": {},
    "outputs": [
@@ -78,7 +78,7 @@
      "output_type": "stream",
      "text": [
       "🔍 VRAM detectada: 4.3 GB\n",
-      "⚡ Configuración optimizada: batch_size=1, num_workers=0\n",
+      "⚡ Configuración optimizada: batch_size=2, num_workers=0\n",
       "🚀 GPU detectada: NVIDIA GeForce GTX 1650 Ti\n",
       "💾 VRAM total: 4.3 GB\n",
       "🖥️  Device: cuda:0\n"
@@ -93,7 +93,7 @@
     "        print(f\"🔍 VRAM detectada: {gpu_memory_gb:.1f} GB\")\n",
     "        \n",
     "        # Configuración solicitada:\n",
-    "        batch_size = 1\n",
+    "        batch_size = 2\n",
     "        num_workers = 0\n",
     "            \n",
     "        print(f\"⚡ Configuración optimizada: batch_size={batch_size}, num_workers={num_workers}\")\n",
@@ -137,18 +137,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "id": "f6440970",
    "metadata": {},
    "outputs": [],
    "source": [
     "# === Dataset con sliding window ===\n",
     "class SlidingWindowVideoDataset(Dataset):\n",
-    "    def __init__(self, video_paths, clip_duration, stride, num_frames=64):\n",
+    "    def __init__(self, video_paths, clip_duration, stride, num_frames=64, transform=None):\n",
     "        self.clips = []\n",
     "        self.clip_duration = clip_duration\n",
     "        self.stride = stride\n",
     "        self.num_frames = num_frames\n",
+    "        self.transform = None\n",
     "        \n",
     "        # Generar todos los clips con sliding window\n",
     "        for video_path, label in video_paths:\n",
@@ -252,26 +253,63 @@
     "    \n",
     "    def _preprocess_frames(self, frames):\n",
     "        \"\"\"Convierte frames a tensor y aplica transformaciones\"\"\"\n",
-    "        # Convertir a tensor [T, H, W, C]\n",
-    "        video_tensor = torch.from_numpy(np.array(frames)).float()\n",
+    "        processed = []\n",
     "        \n",
-    "        # Permutar a [C, T, H, W]\n",
-    "        video_tensor = video_tensor.permute(3, 0, 1, 2)\n",
+    "        # ---------- A) aplica la misma aleatoriedad a todo el clip ----------\n",
+    "        if self.transform is not None:\n",
+    "            # Para que flip y jitter sean coherentes en los 16 frames,\n",
+    "            # fijamos una semilla por clip (opcional pero práctico).\n",
+    "            seed = torch.randint(0, 10_000, (1,)).item()\n",
     "        \n",
-    "        # Normalizar a [0,1]\n",
-    "        video_tensor = video_tensor / 255.0\n",
+    "        for f in frames:\n",
+    "            img = f  # ndarray RGB [H,W,3]\n",
+    "            \n",
+    "            if self.transform is not None:\n",
+    "                torch.manual_seed(seed)       # ➌ misma rand para el clip\n",
+    "                img = self.transform(img)     # devuelve Tensor CxHxW [0,1] y normalizado\n",
+    "            else:\n",
+    "                img = torch.from_numpy(img).permute(2,0,1).float() / 255.\n",
+    "\n",
+    "            processed.append(img)\n",
     "        \n",
-    "        # Normalización estándar\n",
-    "        mean = torch.tensor([0.45, 0.45, 0.45]).view(3, 1, 1, 1)\n",
-    "        std = torch.tensor([0.225, 0.225, 0.225]).view(3, 1, 1, 1)\n",
-    "        video_tensor = (video_tensor - mean) / std\n",
-    "        \n",
-    "        return video_tensor"
+    "        video_tensor = torch.stack(processed, dim=1)  # [C, T, H, W]\n",
+    "        return video_tensor\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
+   "id": "d4c90264",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torchvision import transforms\n",
+    "\n",
+    "# ---- transform para ENTRENAMIENTO ----\n",
+    "TRAIN_TRANSFORM = transforms.Compose([\n",
+    "    transforms.ToPILImage(),                       # ndarray → PIL\n",
+    "    transforms.Resize(TARGET_SIZE),                # 112×112\n",
+    "    transforms.RandomHorizontalFlip(p=0.5),\n",
+    "    transforms.ColorJitter(brightness=0.12,\n",
+    "                           contrast=0.12),\n",
+    "    transforms.ToTensor(),                         # → Tensor [0,1]\n",
+    "    transforms.Normalize([0.45, 0.45, 0.45],\n",
+    "                         [0.225,0.225,0.225]),\n",
+    "])\n",
+    "\n",
+    "# ---- transform para VALIDACIÓN / TEST ----\n",
+    "VAL_TRANSFORM = transforms.Compose([\n",
+    "    transforms.ToPILImage(),\n",
+    "    transforms.Resize(TARGET_SIZE),\n",
+    "    transforms.ToTensor(),\n",
+    "    transforms.Normalize([0.45, 0.45, 0.45],\n",
+    "                         [0.225,0.225,0.225]),\n",
+    "])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "id": "b0f975a8",
    "metadata": {},
    "outputs": [],
@@ -335,22 +373,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "id": "db8e1320",
    "metadata": {},
    "outputs": [],
    "source": [
     "# === Modelo I3D ===\n",
-    "def crear_modelo_i3d():\n",
-    "    \"\"\"Crea modelo I3D-ResNet50 usando PyTorchVideo Hub\"\"\"\n",
-    "    try:\n",
+    "def crear_modelo_i3d(num_clases: int = 3, freeze_backbone: bool = True):\n",
+    "    \"\"\"Devuelve un I3D-ResNet50.\n",
+    "       Si freeze_backbone=True, congela los bloques 0-3.\"\"\"\n",
+    "    try: \n",
     "        from pytorchvideo.models.hub import i3d_r50\n",
-    "        \n",
-    "        # Crear modelo I3D desde PyTorchVideo Hub\n",
-    "        print(\"🔄 Creando modelo I3D-ResNet50 desde PyTorchVideo Hub...\")\n",
-    "        model = i3d_r50(pretrained=False)  # Sin pesos preentrenados por ahora\n",
-    "        \n",
-    "        print(\"✅ Modelo I3D-ResNet50 creado exitosamente\")\n",
+    "\n",
+    "        print(\"🔄 Creando modelo I3D-ResNet50 …\")\n",
+    "        model = i3d_r50(pretrained=False)\n",
+    "\n",
+    "        # 1) Cargar pesos preentrenados\n",
+    "        cargar_pesos_preentrenados(model, PRETRAINED_MODEL)\n",
+    "\n",
+    "        # 2) Adaptar la capa final (3 clases)\n",
+    "        model.blocks[-1].proj = nn.Linear(\n",
+    "            model.blocks[-1].proj.in_features, num_clases\n",
+    "        )\n",
+    "        print(f\"✅ Capa final adaptada → {num_clases} clases\")\n",
+    "\n",
+    "        # 3) CONGELAR bloques 0-3 si se solicita\n",
+    "        if freeze_backbone:\n",
+    "            for name, p in model.named_parameters():\n",
+    "                if name.startswith((\"blocks.0\", \"blocks.1\", \"blocks.2\", \"blocks.3\")):\n",
+    "                    p.requires_grad = False\n",
+    "            print(\"🧊  Bloques 0-3 congelados\")\n",
+    "\n",
     "        return model\n",
     "        \n",
     "    except ImportError:\n",
@@ -478,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "id": "ea50b6ff",
    "metadata": {},
    "outputs": [],
@@ -488,7 +541,10 @@
     "    \"\"\"Función principal de entrenamiento con validación y early stopping\"\"\"\n",
     "    model.to(device)\n",
     "    \n",
-    "    optimizer = optim.Adam(model.parameters(), lr=LEARNING_RATE, weight_decay=1e-5)\n",
+    "    optimizer = optim.Adam(\n",
+    "        filter(lambda p: p.requires_grad, model.parameters()),\n",
+    "        lr=LEARNING_RATE, weight_decay=1e-5\n",
+    "    )\n",
     "    # Learning rate scheduler para convergencia más rápida\n",
     "    scheduler = optim.lr_scheduler.ReduceLROnPlateau(\n",
     "        optimizer, mode='min', factor=0.5, patience=2\n",
@@ -724,26 +780,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "id": "5a6ce487",
    "metadata": {},
    "outputs": [],
    "source": [
     "def ejecutar_entrenamiento():\n",
     "    \"\"\"Función principal para ejecutar el entrenamiento\"\"\"\n",
-    "    # Crear modelo\n",
+    "    # Crear el modelo con backbone congelado\n",
     "    print(\"\\n🧠 Configurando modelo I3D...\")\n",
-    "    model = crear_modelo_i3d()\n",
+    "    model = crear_modelo_i3d(num_clases=len(LABELS), freeze_backbone=True)\n",
     "\n",
     "    # Descargar modelo preentrenado si no existe\n",
     "    print(\"\\n📦 Verificando modelo preentrenado...\")\n",
     "    descargar_modelo_preentrenado()\n",
     "\n",
     "    # Cargar pesos preentrenados\n",
-    "    cargar_pesos_preentrenados(model, PRETRAINED_MODEL)\n",
+    "    #cargar_pesos_preentrenados(model, PRETRAINED_MODEL)\n",
     "\n",
     "    # Modificar capa final\n",
-    "    modificar_capa_final(model, len(LABELS))\n",
+    "    #modificar_capa_final(model, len(LABELS))\n",
     "\n",
     "    # Mostrar información del modelo\n",
     "    model_params = sum(p.numel() for p in model.parameters())\n",
@@ -772,13 +828,15 @@
     "        video_paths=train_video_paths,\n",
     "        clip_duration=CLIP_DURATION,\n",
     "        stride=STRIDE,\n",
-    "        num_frames=NUM_FRAMES\n",
+    "        num_frames=NUM_FRAMES,\n",
+    "        transform=TRAIN_TRANSFORM\n",
     "    )\n",
     "    val_dataset = SlidingWindowVideoDataset(\n",
     "        video_paths=val_video_paths,\n",
     "        clip_duration=CLIP_DURATION,\n",
     "        stride=STRIDE,\n",
-    "        num_frames=NUM_FRAMES\n",
+    "        num_frames=NUM_FRAMES,\n",
+    "        transform=VAL_TRANSFORM\n",
     "    )\n",
     "\n",
     "    # Crear dataloaders para entrenamiento y validación con optimizaciones\n",
@@ -825,14 +883,14 @@
      "text": [
       "\n",
       "🧠 Configurando modelo I3D...\n",
-      "🔄 Creando modelo I3D-ResNet50 desde PyTorchVideo Hub...\n",
-      "✅ Modelo I3D-ResNet50 creado exitosamente\n",
+      "🔄 Creando modelo I3D-ResNet50 …\n",
+      "🔍 Detectado formato PyTorchVideo (.pyth)\n",
+      "✅ Pesos preentrenados cargados: 320/320 capas\n",
+      "✅ Capa final adaptada → 3 clases\n",
+      "🧊  Bloques 0-3 congelados\n",
       "\n",
       "📦 Verificando modelo preentrenado...\n",
       "✅ Modelo preentrenado encontrado: I3D_8x8_R50_pytorchvideo.pyth\n",
-      "🔍 Detectado formato PyTorchVideo (.pyth)\n",
-      "✅ Pesos preentrenados cargados: 320/320 capas\n",
-      "✅ Capa final 'blocks.6.proj' modificada: 2048 -> 3\n",
       "📊 Parámetros del modelo: 27,230,019\n",
       "\n",
       "📂 Buscando videos de ENTRENAMIENTO en: ./tav_clean/training\n",
@@ -856,21 +914,21 @@
       "🔄 Creando datasets con sliding window...\n",
       "📊 Total de clips generados: 7401\n",
       "📊 Total de clips generados: 1103\n",
-      "✅ DataLoaders creados: 7401 batches de entrenamiento, 1103 batches de validación\n",
+      "✅ DataLoaders creados: 3700 batches de entrenamiento, 551 batches de validación\n",
       "✅ Mixed Precision habilitado (AMP)\n",
       "🚀 Optimizaciones CUDA habilitadas (TF32, cuDNN benchmark)\n",
       "📊 VRAM disponible: 4.3 GB\n",
       "\n",
       "🚀 [Entrenamiento iniciado en cuda:0]\n",
-      "📋 Configuración: 10 épocas, batch_size=1, lr=0.0001\n",
+      "📋 Configuración: 10 épocas, batch_size=2, lr=0.0001\n",
       "💡 TIPS para maximizar GPU:\n",
       "   - Si GPU < 2GB durante entrenamiento, considera aumentar batch_size\n",
       "   - VRAM total disponible: 4.3GB\n",
-      "   - Batch size actual: 1\n",
+      "   - Batch size actual: 2\n",
       "\n",
       "📅 --- Época 1/10 ---\n",
       "✅ Primer batch cargado y procesado.\n",
-      "   [   1/7401] Loss: 1.0371 | Acc: 100.00% | ETA: 318955s | Preds: {'Normal': 1} | GPU: 0.3GB\n"
+      "   [   1/3700] Loss: 0.9519 | Acc: 100.00% | ETA: 202224s | Preds: {'Robo': 2} | GPU: 0.5GB\n"
      ]
     }
    ],
